tests/fixtures/invalid/round_list_dict.py
# Cannot call round() with List[int], Dict[str, int]
x = round([1, 2, 3], {"a": 1})
